Set allowed line length for black to 119 and reformat modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ pre-commit = "2.20.0"
 [tool.poetry.scripts]
 streamlit = "poetry_run:streamlit"
 
+[tool.black]
+line-length = 119
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
